<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/margin_16"
    android:background="?attr/colorPrimary">

    <TextView
        android:id="@+id/heading_favourites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_36"
        android:text="@string/favorite"
        android:textSize="@dimen/header_text_size"
        android:textColor="?android:textColorPrimary"
        android:fontFamily="@font/ys_display_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_favourite_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/margin_36"
        android:background="?attr/colorPrimary"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/heading_favourites"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <ImageView
        android:id="@+id/image_list_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_190"
        android:src="@drawable/list_empty_1x"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/heading_favourites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/text_list_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:visibility="visible"
        android:text="@string/list_empty"
        android:textSize="@dimen/header_text_size"
        android:textColor="?android:textColorPrimary"
        android:fontFamily="@font/ys_display_medium"
        app:layout_constraintTop_toBottomOf="@id/image_list_empty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/image_no_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_190"
        android:src="@drawable/no_list_1x"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/heading_favourites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/text_no_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:visibility="gone"
        android:textAlignment="center"
        android:text="@string/no_list"
        android:textSize="@dimen/header_text_size"
        android:textColor="?android:textColorPrimary"
        android:fontFamily="@font/ys_display_medium"
        app:layout_constraintTop_toBottomOf="@id/image_no_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

