<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".search.presentation.ui.SearchFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_19"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/vacancy_search"
        android:textColor="?android:textColorPrimary"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/image_filter"
        android:layout_width="@dimen/edit_text_height"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_12"
        android:backgroundTint="?attr/colorPrimary"
        android:src="@drawable/image_filter_passive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/filter_edittext_min_height"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_27"
        android:layout_marginEnd="@dimen/margin_16"
        android:background="@drawable/edit_text_background"
        android:hint="@string/enter_request"
        android:imeOptions="actionDone"
        android:paddingStart="@dimen/margin_16"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="?attr/colorOnSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <ImageButton
        android:id="@+id/icon_search"
        android:layout_width="@dimen/edit_text_height"
        android:layout_height="@dimen/edit_text_height"
        android:src="@drawable/icon_search"
        android:background="?attr/colorSecondary"
        android:layout_marginEnd="@dimen/margin_4"
        app:layout_constraintBottom_toBottomOf="@+id/search_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/search_edit_text"
        app:layout_constraintTop_toTopOf="@+id/search_edit_text" />

    <ImageButton
        android:id="@+id/icon_cross"
        android:layout_width="@dimen/edit_text_height"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginEnd="@dimen/margin_4"
        android:src="@drawable/icon_cross"
        android:background="?attr/colorSecondary"
        app:layout_constraintBottom_toBottomOf="@+id/search_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/search_edit_text"
        app:layout_constraintTop_toTopOf="@+id/search_edit_text"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_search"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_46"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_edit_text" />

    <TextView
        android:id="@+id/text_vacancy_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:paddingHorizontal="@dimen/margin_12"
        android:paddingVertical="@dimen/margin_4"
        android:background="@drawable/text_search_count_backgr"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="@dimen/regular_text_size"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_edit_text" />

    <ImageView
        android:id="@+id/image_cover"
        style="@style/SearchCoverImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_164"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_156"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_edit_text" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_connection_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="image_connection_error,text_connection_error" />

    <ImageView
        android:id="@+id/image_connection_error"
        style="@style/ErrorNetworkImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_143"
        android:layout_marginBottom="@dimen/margin_177"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_edit_text"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/text_connection_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:paddingBottom="@dimen/margin_8"
        android:textAlignment="center"
        android:text="@string/network_error"
        android:textSize="@dimen/header_text_size"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?android:textColorPrimary"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/image_connection_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_vacancy_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="image_vacancy_error,text_vacancy_error" />

    <ImageView
        android:id="@+id/image_vacancy_error"
        style="@style/ErrorVacancyImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_130"
        android:layout_marginBottom="@dimen/margin_190"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_edit_text"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_vacancy_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/vacancy_error"
        android:textSize="@dimen/header_text_size"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?android:textColorPrimary"
        android:textAlignment="center"
        android:paddingBottom="@dimen/margin_8"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/image_vacancy_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_server_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="image_server_error,text_server_error" />

    <ImageView
        android:id="@+id/image_server_error"
        style="@style/ErrorServerImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_143"
        android:layout_marginBottom="@dimen/margin_177"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_edit_text"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_server_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/server_error"
        android:textSize="@dimen/header_text_size"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?android:textColorPrimary"
        android:textAlignment="center"
        android:paddingBottom="@dimen/margin_8"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/image_server_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/margin_156"
        android:layout_marginVertical="@dimen/margin_244"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_edit_text" />

    <View
        android:id="@+id/view_element"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_80"
        android:background="?attr/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginHorizontal="@dimen/margin_156"
        android:layout_marginBottom="@dimen/margin_16"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>